--- a/pages/projects/[slug]/project.module.scss
+++ b/pages/projects/[slug]/project.module.scss
@@ -8,7 +8,7 @@
 
 .backButton {
   position: absolute;
-  top: 15px;
+  top: 75px;
   left: 20px;
   z-index: 10;
   box-shadow: 3px 3px 10px 0px rgba(0, 0, 0, .35);
@@ -85,5 +85,12 @@
   .subcontent {
     border-left: 3px solid $secondary-color-dark;
     padding-bottom: 10px;
+  }
+}
+
+
+@media (min-width: 1200px) {
+  .backButton {
+    top: 15px;
   }
 }
